--- a/.github/workflows/main_3dc-17.yml
+++ b/.github/workflows/main_3dc-17.yml
@@ -22,10 +22,10 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build 3dc-g17-main.sln --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish 3dc-g17-main.sln -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -62,4 +62,3 @@ jobs:
           app-name: '3dc-17'
           slot-name: 'Production'
           package: .
-          
