--- a/.github/workflows/main_3dc-17.yml
+++ b/.github/workflows/main_3dc-17.yml
@@ -25,7 +25,7 @@ jobs:
         run: dotnet build 3dc-g17-main.sln --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish 3dc-g17-main.sln -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish 3dc-g17-main.sln -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
