--- a/.github/workflows/main_3dc-17.yml
+++ b/.github/workflows/main_3dc-17.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - 3dc-17
+name: Build, test, and deploy ASP.Net Core app to Azure Web App - 3dc-17
 
 on:
   push:
@@ -23,6 +23,9 @@ jobs:
 
       - name: Build with dotnet
         run: dotnet build 3dc-g17-main.sln --configuration Release
+        
+      - name: Test with dotnet
+        run: dotnet test 3dc-g17-main.sln --configuration Release
 
       - name: dotnet publish
         run: dotnet publish 3dc-g17-main.sln -c Release -o "${{env.DOTNET_ROOT}}/myapp"
