--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -43,6 +43,7 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "babel-jest": "^29.7.0",
+    "cypress": "^13.15.2",
     "jest": "^27.5.1"
   },
   "jest": {
