--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -16,8 +16,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "react-scripts test src/**/*.test.js --watchAll=false"
   },
   "eslintConfig": {
     "extends": [
