--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -17,7 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "react-scripts test src/**/*.test.js --watchAll=false"
+    "test": "react-scripts test --watchAll=false"
   },
   "eslintConfig": {
     "extends": [
