#112 #159 #110 Had to make a couple changes because the group discussed it would be better

--- a/dotnet-backend/appsettings.json
+++ b/dotnet-backend/appsettings.json
@@ -26,5 +26,8 @@
     "SmtpPort": 587,
     "SmtpUsername": "isep7446@gmail.com",
     "SmtpPassword": "sqmdifqshiuigfla"
+  },
+  "MedicalRecordsApi": {
+    "BaseUrl": "http://localhost:3001"
   }
 }
