--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@tweenjs/tween.js": "^25.0.0",
     "axios": "^1.7.7",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
@@ -57,5 +59,10 @@
     "transformIgnorePatterns": [
       "/node_modules/(?!axios)"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "babel.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
