--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -6,9 +6,11 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@tweenjs/tween.js": "^25.0.0",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
